--- a/views/index.html
+++ b/views/index.html
@@ -30,13 +30,13 @@
         </div>
     </header>
 
-    <section class="hero">
-        <div class="container">
-            <h1>Welcome to ShopNow</h1>
-            <p>Discover amazing products at great prices</p>
-            <a href="/products" class="btn">Shop Now</a>
-        </div>
-    </section>
+   <section class="hero" style="background-color: #4a6cf7; color: white;">
+    <div class="container">
+        <h1>Welcome to ShopNow</h1>
+        <p>Discover amazing products at great prices</p>
+        <a href="/products" class="btn">Shop Now</a>
+    </div>
+</section>
 
     <section class="featured-products">
         <div class="container">
