--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="product-detail-content">
                 <div class="product-image">
-                    <img src="<%= product.image_url %>" alt="<%= product.name %>">
+                    <img src="<%= product.image_url %>" alt="<%= product.name %>" class="product-image">
                 </div>
                 <div class="product-info">
                     <h1><%= product.name %></h1>
@@ -72,12 +72,12 @@
                 </div>
                 <div class="footer-section">
                     <h3>Contact Info</h3>
-                    <p>Email: info@shopnow.com</p>
-                    <p>Phone: +1 234 567 8900</p>
+                    <p>Email: info@dhinashop.com</p>
+                    <p>Phone: +91 8610963736</p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 ShopNow. All rights reserved.</p>
+                <p>&copy; 2025 ShopNow. All rights reserved.</p>
             </div>
         </div>
     </footer>
